slice stars to prevent horizontal scroll

--- a/src/styles/pages/new-landing-page.scss
+++ b/src/styles/pages/new-landing-page.scss
@@ -7,10 +7,11 @@ $mountain-size: 48vh;
     > .sky {
       display: grid;
       grid-template-columns: 1fr auto 1fr;
-      grid-template-rows: 1fr auto 1fr;
+      grid-template-rows: minmax(250px, 1fr) auto minmax(250px, 1fr);
 
       position: relative;
       background-image: linear-gradient(to bottom, $human-blue, $human-pink);
+      min-height: 700px;
       height: 100vh;
       width: 100vw;
 
@@ -38,6 +39,7 @@ $mountain-size: 48vh;
         grid-column: 1 / 4;
         grid-row: 1 / 4;
         height: 100%;
+        width: 100%;
       }
 
       .mountain-background {
@@ -85,13 +87,13 @@ $mountain-size: 48vh;
 
       $astronaut-width: 44.166666667%;
 
-      > .about {
+      > .about, .why {
         color: white;
         margin-left: $astronaut-width;
         padding-right: 100px;
         text-align: left;
 
-        > h2 {
+        h2 {
           text-align: left;
           color: white;
           font-size: 2em;
@@ -116,20 +118,20 @@ $mountain-size: 48vh;
       }
     }
 
-    .why {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: white;
-      border-radius: 40px;
-      margin: 300px 100px;
-      padding: 100px;
+    // .why {
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    //   background-color: white;
+    //   border-radius: 40px;
+    //   margin: 300px 100px;
+    //   padding: 100px;
 
-      h1 {
-        color: $human-blue;
-        text-align: left;
-      }
-    }
+    //   h1 {
+    //     color: $human-blue;
+    //     text-align: left;
+    //   }
+    // }
 
     .join {
       display: flex;
